aplicando bootstrap, navbar para los cinco html y un html completamente armando con bootstrap

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ li{
 
  /*GRID de index.html*/
 .mainInicio{
+    margin: 1rem;
     display:grid ;
     grid-template-columns: auto auto ;
     grid-template-rows: auto auto;
@@ -203,6 +204,7 @@ footer{
 
 /*GRID*/
 .mainCompraVenta{
+    margin: 1rem;
     display:grid ;
     grid-template-columns: auto auto ;
     grid-template-rows: auto auto ;
